--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/smart_waste_db
 spring.datasource.username=postgres
 spring.datasource.password=IAWss55
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.task.scheduling.enabled=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
