--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^1.13.2",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
